--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,9 +5,9 @@ on:
     push:
         branches-ignore:
             - classic*
-  # pull_request:
-  #     branches-ignore:
-  #         - classic*
+    # pull_request:
+    #     branches-ignore:
+    #         - classic*
 
 env:
     ASAN_OPTIONS: detect_stack_use_after_return=1:detect_leaks=0
@@ -16,7 +16,7 @@ jobs:
     testmodels:
         strategy:
             matrix:
-        # os: ['ubuntu-latest', 'self-hosted']
+                # os: ['ubuntu-latest', 'self-hosted']
                 os: [ubuntu-22.04]
                 testmode: [OFF, ON]
                 testname: [classicmode, classicmode_3d, kilonova, nebularonezone]
@@ -50,10 +50,10 @@ jobs:
                   g++ -march=native -Q --help=target | grep -- '-march=  ' | cut -f3
                   echo "count=$(python3 -c 'import multiprocessing; print(multiprocessing.cpu_count())')" >> $GITHUB_OUTPUT
 
-      # we can cache this, but then we don't test the code that generates ratecoeff_v2.dat
+            # we can cache this, but then we don't test the code that generates ratecoeff_v2.dat
             - name: Cache ratecoeff_v2.dat
               if: matrix.testname == 'classicmode' || matrix.testname == 'classicmode_3d'
-        # if: matrix.testname == 'classicmode' && matrix.testmode != 'ON'
+              # if: matrix.testname == 'classicmode' && matrix.testmode != 'ON'
               uses: actions/cache@v3
               with:
                   path: tests/${{ matrix.testname }}_testrun/ratecoeff_v2.dat
@@ -138,8 +138,8 @@ jobs:
                   mkdir job1
                   ../../scripts/movefiles.sh job1
                   time mpirun -np 1 ./exspec
-                  python3 ../../scripts/mergerangleres.py
-                  # rm light_curve_res_*.out spec_res_*.out, specpol_res_*.out
+                  python3 ../../scripts/mergeangleres.py
+                  rm light_curve_res_*.out spec_res_*.out, specpol_res_*.out
 
             - name: cat exspec log
               if: always()
@@ -213,22 +213,22 @@ jobs:
                   name: test-${{ matrix.testname }}-output-pdf
                   path: tests/*.pdf
 
-  # - name: Compile previous commit
-  #   if: matrix.testmode == 'OFF'
-  #   continue-on-error: true
-  #   run: |
-  #       git checkout HEAD~1
-  #       git log -n 1
-  #       cp tests/${{ matrix.testname }}_testrun/artisoptions.h .
-  #       make TESTMODE=${{ matrix.testmode }} MPI=ON -j${{ steps.cpu-count.outputs.count }} sn3d exspec
-  #       cp sn3d tests/${{ matrix.testname }}_testrun/
-  #       cp exspec tests/${{ matrix.testname }}_testrun/
+    # - name: Compile previous commit
+    #   if: matrix.testmode == 'OFF'
+    #   continue-on-error: true
+    #   run: |
+    #       git checkout HEAD~1
+    #       git log -n 1
+    #       cp tests/${{ matrix.testname }}_testrun/artisoptions.h .
+    #       make TESTMODE=${{ matrix.testmode }} MPI=ON -j${{ steps.cpu-count.outputs.count }} sn3d exspec
+    #       cp sn3d tests/${{ matrix.testname }}_testrun/
+    #       cp exspec tests/${{ matrix.testname }}_testrun/
 
-  # - name: Run previous commit job0 start
-  #   if: matrix.testmode == 'OFF'
-  #   continue-on-error: true
-  #   working-directory: tests/${{ matrix.testname }}_testrun/
-  #   run: |
-  #       cp input-newrun.txt input.txt
-  #       touch output_0-0.txt
-  #       time mpirun -np 2 ./sn3d
+    # - name: Run previous commit job0 start
+    #   if: matrix.testmode == 'OFF'
+    #   continue-on-error: true
+    #   working-directory: tests/${{ matrix.testname }}_testrun/
+    #   run: |
+    #       cp input-newrun.txt input.txt
+    #       touch output_0-0.txt
+    #       time mpirun -np 2 ./sn3d
