--- a/.github/workflows/ci-checks.yml
+++ b/.github/workflows/ci-checks.yml
@@ -5,9 +5,9 @@ on:
     push:
         branches-ignore:
             - classic*
-    # pull_request:
-    #     branches-ignore:
-    #         - classic*
+  # pull_request:
+  #     branches-ignore:
+  #         - classic*
 
 jobs:
     cppcheck:
@@ -45,7 +45,8 @@ jobs:
         runs-on: ubuntu-22.04
         strategy:
             matrix:
-                compiler: [{name: gcc, ver: 11}, {name: gcc, ver: 12}, {name: clang, ver: 14}, {name: clang, ver: 15}]
+                compiler: [{name: gcc, ver: 11}, {name: gcc, ver: 12}, {name: gcc, ver: 13}, {name: clang, ver: 14}, {name: clang, ver: 15}, {name: clang,
+                          ver: 16}]
                 mpi: [ON, OFF]
                 artisoptionsfile: [artisoptions_christinenonthermal.h, artisoptions_classic.h, artisoptions_kilonova_lte.h, artisoptions_nltenebular.h]
             fail-fast: false
@@ -85,9 +86,9 @@ jobs:
             - name: install gsl
               run: sudo apt-get install libgsl-dev
 
-            # - name: Set compiler environment variables (MPI off)
-            #   if: matrix.mpi == 'OFF'
-            #   run: echo "CXX=${{ matrix.compiler.cmd }}" >> $GITHUB_ENV
+      # - name: Set compiler environment variables (MPI off)
+      #   if: matrix.mpi == 'OFF'
+      #   run: echo "CXX=${{ matrix.compiler.cmd }}" >> $GITHUB_ENV
 
             - name: Set compiler environment variables (MPI on)
               if: matrix.mpi == 'ON'
