--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,16 +50,16 @@ jobs:
                   g++ -march=native -Q --help=target | grep -- '-march=  ' | cut -f3
                   echo "count=$(python3 -c 'import multiprocessing; print(multiprocessing.cpu_count())')" >> $GITHUB_OUTPUT
 
-            # we can cache this, but then we don't test the code that generates ratecoeff_v2.dat
-            - name: Cache ratecoeff_v2.dat
+            # we can cache this, but then we don't test the code that generates ratecoeff.dat
+            - name: Cache ratecoeff.dat
               if: matrix.testname == 'classicmode' || matrix.testname == 'classicmode_3d'
               # if: matrix.testname == 'classicmode' && matrix.testmode != 'ON'
               uses: actions/cache@v3
               with:
-                  path: tests/${{ matrix.testname }}_testrun/ratecoeff_v2.dat
-                  key: tests/${{ matrix.testname }}_testrun/ratecoeff_v2.dat-${{ github.sha }}
+                  path: tests/${{ matrix.testname }}_testrun/ratecoeff.dat
+                  key: tests/${{ matrix.testname }}_testrun/ratecoeff.dat-${{ github.sha }}
                   restore-keys: |
-                      tests/${{ matrix.testname }}_testrun/ratecoeff_v2.dat-
+                      tests/${{ matrix.testname }}_testrun/ratecoeff.dat-
 
             - name: Cache test atomic data
               uses: actions/cache@v3
