--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,6 +62,7 @@ jobs:
                       tests/${{ matrix.testname }}_testrun/ratecoeff.dat-
 
             - name: Cache test atomic data
+              if: matrix.testname != 'classicmode'
               uses: actions/cache@v3
               id: cache-testatomicdata
               with:
@@ -69,6 +70,7 @@ jobs:
                   key: tests/atomicdata_feconi.tar.xz
 
             - name: Cache test atomic data classic
+              if: matrix.testname == 'classicmode'
               uses: actions/cache@v3
               id: cache-testatomicdata-classic
               with:
