--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -124,7 +124,7 @@ jobs:
               if: always() && matrix.os != 'selfhosted' && matrix.testmode == 'OFF'
               working-directory: tests/${{ matrix.testname }}_testrun
               run: |
-                  md5sum *.out job0/*.out | tee output/results_md5_job0.txt
+                  md5sum *.out job0/*.out | tee ../${{ matrix.testname }}_inputfiles/results_md5_job0.txt
                   if [ -f results_md5_job0.txt ]; then md5sum -c results_md5_job0.txt; else echo "results_md5_job0.txt not found"; fi
 
             - name: Run test job1 resume
@@ -173,7 +173,7 @@ jobs:
               if: always() && matrix.os != 'selfhosted' && matrix.testmode == 'OFF'
               working-directory: tests/${{ matrix.testname }}_testrun
               run: |
-                  md5sum *.out job1/*.out | tee output/results_md5_final.txt
+                  md5sum *.out job1/*.out | tee ../${{ matrix.testname }}_inputfiles/results_md5_final.txt
                   if [ -f results_md5_final.txt ]; then md5sum -c results_md5_final.txt; else echo "results_md5_final.txt not found"; fi
 
             - name: Prepare for next steps
@@ -190,6 +190,13 @@ jobs:
               with:
                   name: test-${{ matrix.testname }}-output
                   path: tests/${{ matrix.testname }}_testrun/output
+
+            - name: Upload checksum files
+              uses: actions/upload-artifact@v3
+              if: always() && matrix.os != 'selfhosted' && matrix.testmode == 'OFF'
+              with:
+                  name: test-${{ matrix.testname }}-inputfiles
+                  path: tests/${{ matrix.testname }}_inputfiles/results_md5*
 
             - name: Set up Python
               if: always() && matrix.os != 'selfhosted' && matrix.testmode == 'OFF'
@@ -259,8 +266,14 @@ jobs:
         steps:
             - name: Download test output
               uses: actions/download-artifact@v3
+              with:
+                  name: test-*-inputfiles
 
-            - name: Upload checksum files
+            - name: List all files
+              if: always()
+              run: find .
+
+            - name: Upload bundled checksum files
               uses: actions/upload-artifact@v3
               with:
                   name: Checksums
