--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -275,4 +275,4 @@ jobs:
               uses: actions/upload-artifact@v3
               with:
                   name: Checksums
-                  path: test-*-output/results_md5*.txt
+                  path: test-*-inputfiles/results_md5*.txt
