--- a/.github/workflows/ci-checks.yml
+++ b/.github/workflows/ci-checks.yml
@@ -18,15 +18,16 @@ jobs:
 
             - name: install dependencies
               run: |
-                  # git status
-                  # sudo apt-get update
-                  # sudo apt-get install libgsl-dev
-                  # sudo apt install -y openmpi-bin libopenmpi-dev
+                  sudo apt-get update
+                  sudo apt-get install -y gcc-13 g++-13
+                  sudo apt-get install -y libgsl-dev
+                  sudo apt install -y openmpi-bin libopenmpi-dev
                   sudo apt-get -y install cppcheck
 
             - name: run cppcheck
               run: |
                   cp artisoptions_nltenebular.h artisoptions.h
+                  cppcheck --version
                   cppcheck --force --error-exitcode=1 --language=c++ --std=c++20 --enable=warning,performance,portability --suppress=knownConditionTrueFalse,wrongPrintfScanfArgNum .
 
     clang-format:
