--- a/.github/workflows/ci-checks.yml
+++ b/.github/workflows/ci-checks.yml
@@ -28,7 +28,7 @@ jobs:
               run: |
                   cp artisoptions_nltenebular.h artisoptions.h
                   cppcheck --version
-                  cppcheck --force --error-exitcode=1 --language=c++ --std=c++20 --enable=warning,performance,portability --suppress=knownConditionTrueFalse,wrongPrintfScanfArgNum .
+                  cppcheck --force --error-exitcode=1 --language=c++ --std=c++20 --enable=warning,performance,portability --suppress=knownConditionTrueFalse .
 
     clang-format:
         runs-on: ubuntu-22.04
