--- a/.github/workflows/ci-checks.yml
+++ b/.github/workflows/ci-checks.yml
@@ -19,10 +19,26 @@ jobs:
             - name: install dependencies
               run: |
                   sudo apt-get update
+                  apt-cache policy cppcheck
                   sudo apt-get install -y gcc-13 g++-13
                   sudo apt-get install -y libgsl-dev
                   sudo apt install -y openmpi-bin libopenmpi-dev
                   sudo apt-get -y install cppcheck
+
+            - name: run cppcheck
+              run: |
+                  cp artisoptions_nltenebular.h artisoptions.h
+                  cppcheck --version
+                  cppcheck --force --error-exitcode=1 --language=c++ --std=c++20 --enable=warning,performance,portability --suppress=knownConditionTrueFalse .
+    cppcheck-mac:
+        runs-on: macos-latest
+
+        steps:
+            - uses: actions/checkout@v3
+
+            - name: install dependencies
+              run: |
+                  brew install gsl openmpi cppcheck
 
             - name: run cppcheck
               run: |
