--- a/.github/workflows/ci-checks.yml
+++ b/.github/workflows/ci-checks.yml
@@ -11,26 +11,6 @@ on:
 
 jobs:
     cppcheck:
-        runs-on: ubuntu-22.04
-
-        steps:
-            - uses: actions/checkout@v3
-
-            - name: install dependencies
-              run: |
-                  sudo apt-get update
-                  apt-cache policy cppcheck
-                  sudo apt-get install -y gcc-13 g++-13
-                  sudo apt-get install -y libgsl-dev
-                  sudo apt install -y openmpi-bin libopenmpi-dev
-                  sudo apt-get -y install cppcheck
-
-            - name: run cppcheck
-              run: |
-                  cp artisoptions_nltenebular.h artisoptions.h
-                  cppcheck --version
-                  cppcheck --force --error-exitcode=1 --language=c++ --std=c++20 --enable=warning,performance,portability --suppress=knownConditionTrueFalse .
-    cppcheck-mac:
         runs-on: macos-latest
 
         steps:
@@ -38,13 +18,19 @@ jobs:
 
             - name: install dependencies
               run: |
+                  brew update
                   brew install gsl openmpi cppcheck
-
-            - name: run cppcheck
-              run: |
                   cp artisoptions_nltenebular.h artisoptions.h
+
+            - name: run cppcheck and check for errors
+              run: |
                   cppcheck --version
-                  cppcheck --force --error-exitcode=1 --language=c++ --std=c++20 --enable=warning,performance,portability --suppress=knownConditionTrueFalse .
+                  cppcheck --force --error-exitcode=1 --language=c++ --std=c++20 --enable=warning,performance,portability .
+
+            - name: show cppcheck style suggestions
+              run: |
+                  cppcheck --version
+                  cppcheck --force --language=c++ --std=c++20 --enable=style --suppress=knownConditionTrueFalse .
 
     clang-format:
         runs-on: ubuntu-22.04
