--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,9 +38,9 @@ jobs:
               if: matrix.os != 'selfhosted'
               run: |
                   git status
-                  sudo apt-get update
-                  sudo apt-get install -y gcc-13 g++-13
-                  sudo apt-get install -y libgsl-dev
+                  sudo apt update
+                  sudo apt install -y gcc-13 g++-13
+                  sudo apt install -y libgsl-dev
                   sudo apt install -y openmpi-bin libopenmpi-dev
                   echo "OMPI_CXX=g++-13" >> $GITHUB_ENV
 
