--- a/.github/workflows/ci-checks.yml
+++ b/.github/workflows/ci-checks.yml
@@ -50,6 +50,7 @@ jobs:
             matrix:
                 compiler: [{name: gcc, ver: 11}, {name: gcc, ver: 12}, {name: gcc, ver: 13}, {name: clang, ver: 14}, {name: clang, ver: 15}]
                 mpi: [ON, OFF]
+                openmp: [ON, OFF]
                 artisoptionsfile: [artisoptions_classic.h, artisoptions_nltenebular.h]
             fail-fast: false
 
@@ -106,4 +107,4 @@ jobs:
             - name: Compile
               run: |
                   cp -v -p ${{ matrix.artisoptionsfile }} artisoptions.h
-                  make MPI=${{matrix.mpi}} -j${{ steps.cpu-count.outputs.count}} sn3d exspec
+                  make MPI=${{matrix.mpi}} OPENMP=${{matrix.openmp}} -j${{ steps.cpu-count.outputs.count}} sn3d exspec
