--- a/.github/workflows/ci-checks.yml
+++ b/.github/workflows/ci-checks.yml
@@ -90,7 +90,7 @@ jobs:
             - name: install OpenMP
               if: matrix.openmp == 'ON'
               run: |
-                  sudo apt-get install -y libomp libomp-dev
+                  sudo apt-get install -y libomp17 libomp17-dev
 
             - name: install gsl
               run: sudo apt install libgsl-dev
