--- a/.github/workflows/ci-checks.yml
+++ b/.github/workflows/ci-checks.yml
@@ -68,7 +68,11 @@ jobs:
 
             - name: apt update
               run: |
-                  sudo apt update
+                  sudo add-apt-repository main
+                  sudo add-apt-repository universe
+                  sudo add-apt-repository restricted
+                  sudo add-apt-repository multiverse
+                  sudo apt-get update
 
             - name: Install gcc-${{ matrix.compiler.ver }}
               if: matrix.compiler.name == 'gcc'
