--- a/.github/workflows/ci-checks.yml
+++ b/.github/workflows/ci-checks.yml
@@ -52,6 +52,7 @@ jobs:
                 mpi: [ON, OFF]
                 openmp: [ON, OFF]
                 artisoptionsfile: [artisoptions_classic.h, artisoptions_nltenebular.h]
+
             fail-fast: false
 
         name: ${{ matrix.compiler.name }}-${{ matrix.compiler.ver }}${{ matrix.mpi == 'ON' && ' MPI' || ''}}${{ matrix.openmp == 'ON' && ' OpenMP' || ''}}
@@ -94,7 +95,7 @@ jobs:
             - name: install OpenMP
               if: matrix.openmp == 'ON'
               run: |
-                  sudo apt-get install -y libomp5-14 libomp-14-dev
+                  sudo apt-get install -y libomp5-14 libomp-dev
 
             - name: install gsl
               run: sudo apt install libgsl-dev
