--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,9 +7,10 @@ on:
             - classic*
     schedule:
         - cron: 0 13 * * 1
-    # pull_request:
-    #     branches-ignore:
-    #         - classic*
+    workflow_dispatch:
+  # pull_request:
+  #     branches-ignore:
+  #         - classic*
 
 env:
     ASAN_OPTIONS: detect_stack_use_after_return=1:detect_leaks=0
@@ -18,7 +19,7 @@ jobs:
     testmodels:
         strategy:
             matrix:
-                # os: ['ubuntu-latest', 'self-hosted']
+        # os: ['ubuntu-latest', 'self-hosted']
                 os: [ubuntu-22.04]
                 testmode: [OFF, ON]
                 testname: [classicmode_1d_3dgrid, classicmode_3d, kilonova_1d_1dgrid, kilonova_1d_3dgrid, kilonova_2d_2dgrid, kilonova_2d_3dgrid, nebularonezone_1d_3dgrid]
@@ -52,7 +53,7 @@ jobs:
                   g++ -march=native -Q --help=target | grep -- '-march=  ' | cut -f3
                   echo "count=$(python3 -c 'import multiprocessing; print(multiprocessing.cpu_count())')" >> $GITHUB_OUTPUT
 
-            # cache this for classic options because the super low integration tolerance makes generation of the file very slow
+      # cache this for classic options because the super low integration tolerance makes generation of the file very slow
             - name: Cache ratecoeff.dat
               if: matrix.testname == 'classicmode_1d_3dgrid' || matrix.testname == 'classicmode_3d'
               uses: actions/cache@v3
@@ -170,9 +171,6 @@ jobs:
               working-directory: tests/${{ matrix.testname }}_testrun/
               run: |
                   mkdir output
-                  cp -r output_0-0.txt exspec.txt ratecoeff*.dat *.out output/
-                  rsync -av job0 output/
-                  rsync -av job1 output/
                   cat exspec.txt
 
             - name: Checksum job1 output files
@@ -195,7 +193,7 @@ jobs:
               if: always() && matrix.os != 'selfhosted' && matrix.testmode == 'OFF'
               with:
                   name: test-${{ matrix.testname }}-output
-                  path: tests/${{ matrix.testname }}_testrun/output
+                  path: tests/${{ matrix.testname }}_testrun
 
             - name: Upload checksum files
               uses: actions/upload-artifact@v3
@@ -245,25 +243,25 @@ jobs:
                   name: test-${{ matrix.testname }}-output-pdf
                   path: tests/*.pdf
 
-    # - name: Compile previous commit
-    #   if: matrix.testmode == 'OFF'
-    #   continue-on-error: true
-    #   run: |
-    #       git checkout HEAD~1
-    #       git log -n 1
-    #       cp tests/${{ matrix.testname }}_testrun/artisoptions.h .
-    #       make TESTMODE=${{ matrix.testmode }} MPI=ON -j${{ steps.cpu-count.outputs.count }} sn3d exspec
-    #       cp sn3d tests/${{ matrix.testname }}_testrun/
-    #       cp exspec tests/${{ matrix.testname }}_testrun/
+  # - name: Compile previous commit
+  #   if: matrix.testmode == 'OFF'
+  #   continue-on-error: true
+  #   run: |
+  #       git checkout HEAD~1
+  #       git log -n 1
+  #       cp tests/${{ matrix.testname }}_testrun/artisoptions.h .
+  #       make TESTMODE=${{ matrix.testmode }} MPI=ON -j${{ steps.cpu-count.outputs.count }} sn3d exspec
+  #       cp sn3d tests/${{ matrix.testname }}_testrun/
+  #       cp exspec tests/${{ matrix.testname }}_testrun/
 
-    # - name: Run previous commit job0 start
-    #   if: matrix.testmode == 'OFF'
-    #   continue-on-error: true
-    #   working-directory: tests/${{ matrix.testname }}_testrun/
-    #   run: |
-    #       cp input-newrun.txt input.txt
-    #       touch output_0-0.txt
-    #       time mpirun -np 2 ./sn3d
+  # - name: Run previous commit job0 start
+  #   if: matrix.testmode == 'OFF'
+  #   continue-on-error: true
+  #   working-directory: tests/${{ matrix.testname }}_testrun/
+  #   run: |
+  #       cp input-newrun.txt input.txt
+  #       touch output_0-0.txt
+  #       time mpirun -np 2 ./sn3d
 
     combine_checksums:
         needs: testmodels
