--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,10 @@
 {
     "[cpp]": {
-        "editor.tabSize": 2
+        "editor.tabSize": 2,
+        "editor.codeActionsOnSave": {
+            "source.fixAll": true
+        },
+        "editor.formatOnSave": true
     },
     "[yaml]": {
         "editor.tabSize": 4
